--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div id="cal-heatmap"></div>
         
         <div class="legend">
-            <span class="legend-text">0 steps</span>
+            <span class="legend-text">0</span>
             <div class="legend-colors">
                 <div class="legend-box" style="background-color: #c9d1d9;"></div>
                 <div class="legend-box" style="background-color: #14432a;"></div>
@@ -111,7 +111,7 @@
                 <div class="legend-box" style="background-color: #37a446;"></div>
                 <div class="legend-box" style="background-color: #4dd05a;"></div>
             </div>
-            <span class="legend-text">10k+ steps</span>
+            <span class="legend-text">10k+</span>
         </div>
     </div>
 
