--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         .legend {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-end;
             gap: 4px;
             margin-top: 10px;
             font-size: 12px;
