Pivot to Cloudflare R2 for data storage
🚀 Major Architecture Improvement:
- Replace complex GitHub Pages orphan branch with simple R2 uploads
- Add comprehensive R2 setup guide and documentation
- Update script to upload data directly to R2 (no git commits needed)
- Modify website to fetch data from R2 with fallback to local
- Simplify GitHub Actions workflow (no more complex branch switching)

Benefits:
✅ Zero build triggers for data updates
✅ Instant data availability after sync
✅ Global CDN via Cloudflare edge network
✅ Simpler architecture and maintenance
✅ Better performance and reliability

See R2_SETUP.md for configuration instructions.

--- a/index.html
+++ b/index.html
@@ -404,7 +404,9 @@
             return html;
         };
 
-        fetch('./steps_data.json?t=' + Date.now()).then(r => {
+        // Determine data source - R2 or local
+        const dataUrl = window.CONFIG?.R2_DATA_URL || './steps_data.json';
+        fetch(dataUrl + '?t=' + Date.now()).then(r => {
             return r.json();
         }).then(jsonData => {
             // Handle new structure with metadata, or legacy flat structure
