--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script data-goatcounter="https://normal-past.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <script src="./config.js?v=1767921760"></script>
-    <link rel="stylesheet" href="./styles/main.css?v=1736600000">
+    <link rel="stylesheet" href="./styles/main.css?v=1736900000">
 </head>
 <body>
     <div class="container">
@@ -118,18 +118,26 @@
 
     <div id="step-tooltip" role="tooltip" aria-hidden="true"></div>
 
-    <!-- Desktop Popover for Stat Details -->
-    <div id="stat-popover" class="stat-popover" role="dialog" aria-hidden="true">
-        <div class="stat-popover-header">
-            <span id="stat-popover-title"></span>
-            <span id="stat-popover-timeframe" class="stat-popover-timeframe"></span>
-        </div>
-        <div class="stat-popover-hero">
-            <div id="stat-popover-hero-value" class="stat-popover-hero-value"></div>
-            <div id="stat-popover-hero-label" class="stat-popover-hero-label"></div>
-        </div>
-        <div class="stat-popover-details">
-            <div id="stat-popover-details-content"></div>
+    <!-- Desktop Side Panel for Stat Details -->
+    <div id="stat-side-panel-backdrop" class="stat-side-panel-backdrop"></div>
+    <div id="stat-side-panel" class="stat-side-panel" role="dialog" aria-hidden="true">
+        <div class="stat-side-panel-content">
+            <div class="stat-side-panel-header">
+                <div style="display: flex; align-items: center; gap: 12px; flex: 1;">
+                    <h2 id="stat-side-panel-title" class="stat-side-panel-title"></h2>
+                    <span id="stat-side-panel-timeframe" class="stat-side-panel-timeframe"></span>
+                </div>
+                <button id="stat-side-panel-close" class="stat-side-panel-close-button" aria-label="Close">
+                    <i data-lucide="x"></i>
+                </button>
+            </div>
+            <div class="stat-side-panel-hero">
+                <div id="stat-side-panel-hero-value" class="stat-side-panel-hero-value"></div>
+                <div id="stat-side-panel-hero-label" class="stat-side-panel-hero-label"></div>
+            </div>
+            <div class="stat-side-panel-details">
+                <div id="stat-side-panel-details-content"></div>
+            </div>
         </div>
     </div>
 
@@ -154,6 +162,6 @@
         </div>
     </div>
 
-    <script type="module" src="./scripts/main.js?v=1736700000"></script>
+    <script type="module" src="./scripts/main.js?v=1736900000"></script>
 </body>
 </html>
